# agentic-ai

./: .env  README.md
db-agent/: pyproject.toml
db-agent/db_agent/: main.py
